eks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fakebank-api-deployment
  labels:
    app: fakebank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fakebank-api
  template:
    metadata:
      labels:
        app: fakebank-api
    spec:
      containers:
        - name: fakebank-api
          image: 168633195351.dkr.ecr.us-east-2.amazonaws.com/fakebank:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
