eks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fakebank-api-service
spec:
  selector:
    app: fakebank-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
