eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fakebank-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: 'api.fake-bank.org'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: fakebank-api-service
                port:
                  number: 80
